--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span>menu</span> <i class="fa fa-bars"></i>
             </div>
             <ul class="navbar">
-                <li class=""><a href="#">SERVICES</a></li>
+                <li class=""><a href="#SERVICES">SERVICES</a></li>
                 <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
                 <li><a href="#ABOUT">ABOUT</a></li>
                 <li><a href="#TEAM">TEAM</a></li>
@@ -135,10 +135,15 @@
                         reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore
                         laudantium consectetur! </p>
                 </div>
-                <img src="img/about/1.jpg" alt="">
+                <div class="img">
+                    <img src="img/about/1.jpg" alt="">
+                </div>
             </div>
             <div class="box right">
-                <img src="img/about/2.jpg" alt="">
+                <div class="img">
+                    <img src="img/about/2.jpg" alt="">
+                </div>
+
                 <div class="info">
                     <h1>March 2011 </h1>
                     <h1>An Agency is Born </h1>
@@ -155,10 +160,14 @@
                         reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore
                         laudantium consectetur! </p>
                 </div>
-                <img src="img/about/3.jpg" alt="">
+                <div class="img">
+                    <img src="img/about/3.jpg" alt="">
+                </div>
             </div>
             <div class="box right">
-                <img src="img/about/4.jpg" alt="">
+                <div class="img">
+                    <img src="img/about/4.jpg" alt="">
+                </div>
                 <div class="info">
                     <h1>July 2020 </h1>
                     <h2>Phase Two Expansion </h2>
@@ -278,7 +287,7 @@
                 <a href="https://youtube.com/@user-lf6oy5cq8s" target="_blank"><i
                         class="fab fa-youtube youtube"></i></a>
 
-                <a href="https://www.instagram.com/mahmood.32004/" target="_blank"><i
+                <a href="https://www.instagram.com/dev._mahmood/" target="_blank"><i
                         class="fab fa-instagram instagram"></i> </a>
 
                 <a href="https://www.facebook.com/profile.php?id=100022618519064" target="_blank" class="facebook"><i
